# todoesp32

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults  shell.nix
.github/: dependabot.yml
.github/workflows/: rust_ci.yml
firmware/: Cargo.toml  build.rs
firmware/src/: config.example.rs  display.rs  lib.rs  net.rs  retry.rs  sntp.rs  todoist.rs
firmware/src/controls/: header.rs  mod.rs  popup.rs  task_list.rs
firmware/tests/: integration.rs
src/: colour.rs  config.example.rs  display.rs  intro.rs  main.rs  markdown.rs  retry.rs  todoist.rs
src/controls/: header.rs  mod.rs  popup.rs  task_list.rs
todoesp-core/: Cargo.toml
todoesp-core/src/: colour.rs  hash.rs  lib.rs  markdown.rs  snapshot.rs  task.rs  time.rs
