[package]
name = "todoesp"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "todoesp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1.0.86"
chrono = "0.4.38"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
epd-waveshare = "0.5.0"
embedded-hal = "0.2.7"
esp-idf-hal = "0.44.1"
lazy_static = "1.5.0"
u8g2-fonts = "0.2.0"
embedded-svc = "0.28.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[build-dependencies]
embuild = "0.32.0"
