# Virtual workspace for the TodoESP project.
#
# - `todoesp-core` is a portable, host-testable library (run `cargo test`).
# - `firmware` is the `no_std` esp-hal/embassy binary. It targets the Xtensa
#   ESP32 and is built/flashed from within the `firmware/` directory. It is
#   intentionally *excluded* from this workspace so its Xtensa
#   `.cargo/config.toml` and `esp` toolchain do not interfere with host builds
#   and tests of `todoesp-core`.
[workspace]
resolver = "2"
members = ["todoesp-core"]
exclude = ["firmware"]
